cadastro de anuncios

--- a/spread/spread-client/src/pages/cadastro-anuncio/cadastro-anuncio.html
+++ b/spread/spread-client/src/pages/cadastro-anuncio/cadastro-anuncio.html
@@ -19,7 +19,7 @@
   <ion-list class="list-form">
 
     <ion-item>
-      <ion-input [(ngModel)]="anuncio.nome" type="text" placeholder="Descrição da habilidade"></ion-input>
+      <ion-input [(ngModel)]="anuncio.descricao" type="text" placeholder="Descrição da habilidade"></ion-input>
     </ion-item>
 
     <!-- <ion-item>
