--- a/spread/spread-client/src/pages/cadastro-anuncio/cadastro-anuncio.html
+++ b/spread/spread-client/src/pages/cadastro-anuncio/cadastro-anuncio.html
@@ -18,6 +18,10 @@
 <ion-content padding class="register">
   <ion-list class="list-form">
 
+      <ion-item>
+          <ion-input [(ngModel)]="anuncio.tituloAnuncio" type="text" placeholder="Descrição da habilidade"></ion-input>
+        </ion-item>
+
     <ion-item>
       <ion-input [(ngModel)]="anuncio.descricao" type="text" placeholder="Descrição da habilidade"></ion-input>
     </ion-item>
