--- a/spread/spread-client/src/pages/login/login.html
+++ b/spread/spread-client/src/pages/login/login.html
@@ -16,11 +16,11 @@
   <ion-list class="list-form">
 
     <ion-item>
-      <ion-input type="text" placeholder="Email"></ion-input>
+      <ion-input type="text" [(ngModel)]="credentials.login" placeholder="Email"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input type="password" placeholder="Password"></ion-input>
+      <ion-input type="password" [(ngModel)]="credentials.senha" placeholder="Password"></ion-input>
     </ion-item>
 
   </ion-list>
@@ -28,7 +28,7 @@
   <button ion-button color="primary" block (click)="login()">LOGIN</button>
 
   <div text-right margin-top margin-bottom (click)="forgotPwd()">Forgot password?</div>
-
+<!-- 
   <button ion-button icon-left block color="facebook" class="align-left">
     <ion-icon name="logo-facebook"></ion-icon>
     Signin with Facebook
@@ -37,7 +37,7 @@
   <button ion-button icon-left block color="light" margin-top class="align-left card">
     <ion-icon name="logo-google"></ion-icon>
     <span>Signin with Google</span>
-  </button>
+  </button> -->
 
   <div class="align-bottom" padding text-center>
     No Account? <span class="bold" (click)="register()">Register</span>
