--- a/spread/spread-client/src/pages/item/item.html
+++ b/spread/spread-client/src/pages/item/item.html
@@ -4,29 +4,31 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header *ngIf="item != null">
 
   <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>{{ item.name }}</ion-title>
+    <ion-title>{{ item.tituloAnuncio }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content class=" common-bg">
+<ion-content *ngIf="item != null" class=" common-bg">
 
   <div class="card light-bg">
+
+      <img src="{{item.foto}}">
     <!-- slider on top-->
-    <ion-slides pager autoplay="2000" class="border-bottom">
+    <!-- <ion-slides pager autoplay="2000" class="border-bottom">
 
       <ion-slide *ngFor="let slide of item.images">
         <img src="{{ slide }}" alt="">
       </ion-slide>
 
-    </ion-slides>
+    </ion-slides> -->
 
     <div class="rlt">
       <button ion-button class="btn-wish-list card" (click)="toggleWishList(item)" color="light">
@@ -36,26 +38,21 @@
     </div>
 
     <div text-center padding margin-top class="border-bottom">
-      <p>{{ item.short_description }}</p>
-      <h1 class="price" ion-text color="danger" margin-top *ngIf="item.sale_price">{{ item.sale_price | currency:'USD':true
-        }}</h1>
-      <h1 class="price" ion-text color="danger" margin-top *ngIf="!item.sale_price">{{ item.price | currency:'USD':true }}</h1>
-      <h2 class="origin-price text-decoration" ion-text color="gray" margin-top *ngIf="item.sale_price">{{ item.price |
-        currency:'USD':true }}</h2>
+      <p>{{ item.tituloAnuncio }}</p>    
     </div>
 
     <ion-grid>
       <ion-row class="item-stats">
         <ion-col text-center>
-          <div class="text-lg">{{ item.rating }}</div>
+          <div class="text-lg">10</div>
           <span class="text-sm" ion-text color="gray">FeedBacks</span>
         </ion-col>
         <ion-col text-center>
-          <div class="text-lg">{{ item.num_orders}}</div>
+          <div class="text-lg">10</div>
           <span class="text-sm" ion-text color="gray">Orders</span>
         </ion-col>
         <ion-col text-center>
-          <div class="text-lg">{{ item.num_wish_list}}</div>
+          <div class="text-lg">10</div>
           <span class="text-sm" ion-text color="gray">Wish List</span>
         </ion-col>
       </ion-row>
@@ -66,38 +63,41 @@
   <div class="card light-bg" margin-top>
     <ion-item class="no-border">
       <div>
-        <div>{{ getOptionGroupsName(item) }}</div>
-        <div>
-          <span ion-text color="gray" class="pull-left" *ngIf="item.shipping == 0">Free shipping</span>
-          <span ion-text color="gray" class="pull-left" *ngIf="item.shipping != 0">Shipping: {{ item.shipping | currency:'USD':true}}</span>
+       
+        <div *ngIf="item.categoria != null"> 
+          {{item.categoria.nome}}
         </div>
+        
+        <div>
+          <span ion-text color="gray" class="pull-left" *ngIf="item.usuario != null">{{item.usuario.name}}</span>
+         </div>
       </div>
 
       <div item-right>
-        <span class="bold" ion-text color="secondary" (click)="showOptions(item)">SELECT</span>
+        <span class="bold" ion-text color="secondary" (click)="showOptions(item)">Servico Agendado</span>
       </div>
     </ion-item>
 
     <ion-grid>
-      <ion-row>
-        <ion-col>
-          <button ion-button block class="btn-add-cart" (click)="showOptions(item)">ADD TO CART</button>
-        </ion-col>
-        <ion-col>
-          <button ion-button color="primary" block (click)="showOptions(item)">BUY NOW</button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+        <ion-row>
+          <ion-col>
+            <button ion-button block class="btn-add-cart" (click)="showOptions(item)">Fazer Perguntas</button>
+          </ion-col>
+          <ion-col>
+            <button ion-button color="primary" block (click)="showOptions(item)">Enviar solicitação</button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
   </div>
 
   <!--Description-->
   <div class="card light-bg" margin-top>
-    <div class="border-bottom" padding>Item Description</div>
-    <div padding>{{ item.description }}</div>
+    <div class="border-bottom" padding>Descrição anúncio</div>
+    <div padding>{{ item.descricao }}</div>
   </div>
 
-  <!--Feed backs-->
-  <div class="card light-bg" margin-top>
+  <!--Avaliações-->
+  <!-- <div class="card light-bg" margin-top>
     <div padding>
       Feedback({{ item.reviews.length }})
     </div>
@@ -130,10 +130,10 @@
 
       </ion-item>
     </ion-list>
-  </div>
+  </div> -->
 
-  <!--Seller info-->
-  <div class="card light-bg" margin-top>
+  <!--Seller info -- estatisticas -->
+  <!-- <div class="card light-bg" margin-top>
     <div padding class="border-bottom">
       Seller info
     </div>
@@ -158,4 +158,4 @@
       </ion-row>
     </ion-grid>
   </div>
-</ion-content>
+</ion-content> -->
