--- a/spread/spread-client/src/pages/lista-solicitacoes-servico/lista-solicitacoes-servico.html
+++ b/spread/spread-client/src/pages/lista-solicitacoes-servico/lista-solicitacoes-servico.html
@@ -38,13 +38,13 @@
             [ngClass]="{'grid': viewType == 'grid', 'list': viewType == 'list'}">
     <ion-item class="product" *ngFor="let item of items" (click)="viewItem(item.id)">
       <ion-thumbnail item-left>
-        <img src="{{item.foto}}">
+        <img src="{{item.anuncio.foto}}">
       </ion-thumbnail>
       <!--item's information-->
       <div>
-        <div text-wrap>{{ item.tituloAnuncio }}</div>
+        <div text-wrap>{{ item.anuncio.tituloAnuncio }}</div>
         <div>
-           <span ion-text color="danger" >{{ item.usuario.name }}</span>
+           <span ion-text color="danger" >Cliente: {{ item.cliente.nome }}</span>
           <!-- <span ion-text color="danger" *ngIf="!item.sale_price">{{ item.price | currency:'USD':true }}</span> -->
         </div>
         <div class="origin-price text-sm">
@@ -56,7 +56,7 @@
           <!-- <span ion-text color="gray" class="pull-left"> {{ item.categoria.nome}}</span> -->
            
           <span ion-text color="gray" class="pull-right">
-              {{ item.categoria.nome}}
+              {{ item.anuncio.categoria.nome}}
           </span>
           <div class="clear"></div>
         </div>
@@ -64,7 +64,7 @@
             <!-- <span ion-text color="gray" class="pull-left" *ngIf="item.shipping == 0">Free shipping</span> -->
             <!-- <span ion-text color="gray" class="pull-left"> {{ item.categoria.nome}}</span> -->
             <span ion-text color="gray" class="pull-right">
-               Data Anuncio: {{ item.dataAnuncio | date }}
+               Data da solicitação: {{ item.anuncio.dataAnuncio | date }}
             </span>      
             
             <div class="clear"></div>
