--- a/spread/spread-client/src/pages/tab-filter/tab-filter.html
+++ b/spread/spread-client/src/pages/tab-filter/tab-filter.html
@@ -24,8 +24,7 @@
     <ion-item>
       <ion-label>Ship to</ion-label>
       <ion-select [(ngModel)]="filter.shipTo">
-        <ion-option value="">All Regions</ion-option>
-        <ion-option value="vn">Vietnam</ion-option>
+        <ion-option *ngFor="let item of estados" value="">{{item.nome}}</ion-option>
       </ion-select>
     </ion-item>
 
