--- a/spread/spread-client/src/pages/lista-anuncio/lista-anuncio.html
+++ b/spread/spread-client/src/pages/lista-anuncio/lista-anuncio.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>{{ category.name }}</ion-title>
+    <ion-title>Nome categoria</ion-title>
     <ion-buttons end>
       <button ion-button (click)="goToCart()">
         <ion-icon name="cart"></ion-icon>
@@ -20,20 +20,8 @@
 
 </ion-header>
 
-
 <ion-content>
 
-  <div padding class="border-bottom text-lg">
-    <span class="pull-left" (click)="chooseSortBy()" ion-text color="gray">
-      {{ sortBy }}
-      <ion-icon name="md-arrow-dropdown"></ion-icon>
-    </span>
-    <ion-icon class="pull-right" name="apps" (click)="viewGrid()" [hidden]="viewType == 'grid'"></ion-icon>
-    <ion-icon class="pull-right" name="menu" (click)="viewList()" [hidden]="viewType == 'list'"></ion-icon>
-    <div class="clear"></div>
-  </div>
-
-  <!--List of items-->
   <ion-list no-margin class="list-full-border list-products"
             [ngClass]="{'grid': viewType == 'grid', 'list': viewType == 'list'}">
     <ion-item class="product" *ngFor="let item of items" (click)="viewItem(item.id)">
