--- a/spread/spread-client/src/pages/item/item.html
+++ b/spread/spread-client/src/pages/item/item.html
@@ -4,17 +4,21 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header *ngIf="item != null">
+<ion-header>
 
   <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>{{ item.tituloAnuncio }}</ion-title>
+    <ion-title *ngIf="item != null">{{ item.tituloAnuncio }}</ion-title>
+    <ion-buttons end>
+      <button ion-button (click)="goToCart()">
+        <ion-icon name="cart"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
-
 
 <ion-content *ngIf="item != null" class=" common-bg">
 
@@ -45,15 +49,15 @@
       <ion-row class="item-stats">
         <ion-col text-center>
           <div class="text-lg">10</div>
-          <span class="text-sm" ion-text color="gray">FeedBacks</span>
+          <span class="text-sm" ion-text color="gray">Comentários</span>
         </ion-col>
         <ion-col text-center>
           <div class="text-lg">10</div>
-          <span class="text-sm" ion-text color="gray">Orders</span>
+          <span class="text-sm" ion-text color="gray">Reclamações</span>
         </ion-col>
         <ion-col text-center>
           <div class="text-lg">10</div>
-          <span class="text-sm" ion-text color="gray">Wish List</span>
+          <span class="text-sm" ion-text color="gray">Elogios</span>
         </ion-col>
       </ion-row>
     </ion-grid>
