--- a/spread/spread-client/src/pages/lista-solicitacoes-servico/lista-solicitacoes-servico.html
+++ b/spread/spread-client/src/pages/lista-solicitacoes-servico/lista-solicitacoes-servico.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>{{ category.name }}</ion-title>
+    <ion-title>Serviços solicitador</ion-title>
     <ion-buttons end>
       <button ion-button (click)="goToCart()">
         <ion-icon name="cart"></ion-icon>
@@ -23,7 +23,7 @@
 
 <ion-content>
 
-  <div padding class="border-bottom text-lg">
+  <!-- <div padding class="border-bottom text-lg">
     <span class="pull-left" (click)="chooseSortBy()" ion-text color="gray">
       {{ sortBy }}
       <ion-icon name="md-arrow-dropdown"></ion-icon>
@@ -31,7 +31,7 @@
     <ion-icon class="pull-right" name="apps" (click)="viewGrid()" [hidden]="viewType == 'grid'"></ion-icon>
     <ion-icon class="pull-right" name="menu" (click)="viewList()" [hidden]="viewType == 'list'"></ion-icon>
     <div class="clear"></div>
-  </div>
+  </div> -->
 
   <!--List of items-->
   <ion-list no-margin class="list-full-border list-products"
