--- a/spread/spread-client/src/pages/lista-anuncio/lista-anuncio.html
+++ b/spread/spread-client/src/pages/lista-anuncio/lista-anuncio.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Nome categoria</ion-title>
+    <ion-title>{{categoryName}}</ion-title>
     <ion-buttons end>
       <button ion-button (click)="goToCart()">
         <ion-icon name="cart"></ion-icon>
