comfirmação de realização de servico

--- a/spread/spread-client/src/pages/detalhe-solicitacao/detalhe-solicitacao.html
+++ b/spread/spread-client/src/pages/detalhe-solicitacao/detalhe-solicitacao.html
@@ -81,7 +81,7 @@
 
             <button ion-button color="primary" block *ngIf="item != null && 
             item.statusSolicitacao != null && item.statusSolicitacao === 'Servico Agendado'"
-            (click)="showOptions(item)">Confirmar Serviço</button>
+            (click)="confirmarRealizacaoServico(item)">Confirmar Serviço</button>
           </ion-col>
         </ion-row>
       </ion-grid>
