--- a/spread/spread-client/src/pages/register/register.html
+++ b/spread/spread-client/src/pages/register/register.html
@@ -47,7 +47,7 @@
     </ion-item>
 
     <ion-item>
-        <ion-label>Selecione o estado</ion-label>
+        <ion-label>Selecione o Bairro</ion-label>
         <ion-select [(ngModel)]="user.bairro">
             <ion-option *ngFor="let estado of estados" 
             [value]="estado">{{estado.nome}}</ion-option>
