tela de meus anuncios

--- a/spread/spread-client/src/pages/home/home.html
+++ b/spread/spread-client/src/pages/home/home.html
@@ -12,9 +12,9 @@
     </button>
     <ion-title>Home</ion-title>
     <ion-buttons end>
-      <button ion-button (click)="goToSearch()">
+      <!-- <button ion-button (click)="goToSearch()">
         <ion-icon name="search"></ion-icon>
-      </button>
+      </button> -->
       
      
     </ion-buttons>
