--- a/spread/spread-client/src/pages/lista-anuncio/lista-anuncio.html
+++ b/spread/spread-client/src/pages/lista-anuncio/lista-anuncio.html
@@ -65,16 +65,14 @@
 </ion-content>
 
 <!--Footer buttons-->
-<ion-footer class="category">
+<!-- <ion-footer class="category">
   <ion-toolbar position="bottom">
-    <!--filter button-->
     <ion-buttons text-center start>
       <button ion-button icon-left (click)="openFilter('filter')">
         <ion-icon name="ios-funnel"></ion-icon>
         FILTER
       </button>
     </ion-buttons>
-    <!--attribute button-->
     <ion-buttons text-center end>
       <button ion-button icon-left (click)="openFilter('attribute')">
         <ion-icon name="apps"></ion-icon>
@@ -82,4 +80,4 @@
       </button>
     </ion-buttons>
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
