--- a/spread/spread-client/src/pages/login/login.html
+++ b/spread/spread-client/src/pages/login/login.html
@@ -39,6 +39,6 @@
   </button> -->
 
   <div class="align-bottom" padding text-center>
-    No Account? <span class="bold" (click)="register()">Register</span>
+    <span class="bold" (click)="register()">Cadastre-se</span>
   </div>
 </ion-content>
