--- a/spread/spread-client/src/pages/tab-filter/tab-filter.html
+++ b/spread/spread-client/src/pages/tab-filter/tab-filter.html
@@ -23,8 +23,8 @@
   <ion-list class="list-no-border">
     <ion-item>
       <ion-label>Ship to</ion-label>
-      <ion-select [(ngModel)]="filter.shipTo">
-        <ion-option *ngFor="let item of estados" value="">{{item.nome}}</ion-option>
+      <ion-select [(ngModel)]="filter.bairro">
+        <ion-option *ngFor="let item of bairros" value="">{{item.nome}}</ion-option>
       </ion-select>
     </ion-item>
 
